[package]
name = "mmap-rs-with-map-from-existing"
version = "0.6.0"
edition = "2021"
authors = ["Sewer56", "Stephan van Schaik <stephan@synkhronix.com>"]
license = "Apache-2.0 OR MIT"
description = "A temporary fork of mmap-rs with support for creating pages from raw memory. Will be deprecated in near future."
repository = "https://github.com/Sewer56/mmap-rs/tree/unsafe-existing-map-api"
keywords = ["mmap", "memory", "mapping", "VirtualAlloc"]

[dev-dependencies]
tempfile = "3"

[dependencies]
bitflags = "1"
combine = "4"
libc = "0.2"
thiserror = "1"

[target.'cfg(unix)'.dependencies]
nix = "0.26"
sysctl = "0.5"

[target.'cfg(windows)'.dependencies]
widestring = "1"

[target.'cfg(windows)'.dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
]

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
mach2 = "0.4"
